--- a/src/app/component/header/header.component.html
+++ b/src/app/component/header/header.component.html
@@ -2,18 +2,35 @@
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
+    
     <a class="navbar-brand" href="#">Navbar</a>
   
     <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
       <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
         <li class="nav-item active">
-          <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+          <a class="nav-link" href="#" [routerLink]="'/home'">Home <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Link</a>
+          <a class="nav-link" href="#" [routerLink]="'/models'">MODELS</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+          <a class="nav-link" href="#" [routerLink]="'/brand'">BRAND</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#" [routerLink]="'/ownership'">OWNERSHIP</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#" [routerLink]="'/experience'">EXPERIENCE</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#" [routerLink]="'/motorsport'">MOTORSPORT</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#" [routerLink]="'/STORE'">STORE</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link disabled" [routerLink]="'/Price'" href="#" tabindex="-1" aria-disabled="true">
+            Price</a>
         </li>
       </ul>
       <form class="form-inline my-2 my-lg-0">
