--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,6 @@
 <app-header></app-header>
-<app-content></app-content>
+<app-carousel></app-carousel>
+<!-- <app-content></app-content> -->
+<app-cards></app-cards>
 
 <router-outlet></router-outlet>
