--- a/src/app/component/content/content.component.html
+++ b/src/app/component/content/content.component.html
@@ -1,5 +1,5 @@
-<div class="row">
-<div class="container">
+<!-- <div class="row">
+<div class="container"> -->
 <div class="card-deck">
   <div class="card">
     <img src="../assets/image/c4.jpg" class="card-img-top" alt="...">
@@ -35,5 +35,5 @@
   </div>
 
 </div>
-</div>
-</div>
+<!-- </div>
+</div> -->
