material button added

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,3 +4,36 @@
 <app-cards></app-cards>
 
 <router-outlet></router-outlet>
+
+
+<div class="container text-center">
+  <h1>{{title}}</h1>
+</div>
+<div class="container">
+  <div class="row">
+    <div class="search-hero">
+      <input class="form-control" type="text" name="search" [(ngModel)]="searchText" autocomplete="off" placeholder="&#61442;  Start searching for a hero by id or name or country">
+    </div>
+    <table class="table table-striped">
+      <thead>
+      <tr>
+        <th>Id</th>
+        <th>Hero Name</th>
+        <th>Country</th>
+      </tr>
+      </thead>
+      <tbody>
+      <tr *ngFor="let hero of heroes | filter:searchText">
+        <td>{{hero.id}}</td>
+        <td>{{hero.name}}</td>
+        <td>{{hero.country}}</td>
+      </tr>
+      </tbody>
+    </table>
+    <button mat-raised-button mat-fab>Basic</button>
+    <button mat-raised-button mat-fab color="primary">Primary</button>
+    <button mat-raised-button mat-fab color="accent">Accent</button>
+    <button mat-raised-button mat-fab color="warn">Warn</button>
+    <button mat-raised-button mat-fab disabled>Disabled</button>
+  </div>
+</div>
