--- a/src/styles.css
+++ b/src/styles.css
@@ -23,3 +23,5 @@
   text-align: center;
     margin-top: 40px;
 }
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
